# S-Lang

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTORS  Dockerfile  LICENSE  README.md  To Do.md  build.sh
.github/workflows/: cmake.yml
app/: main.cpp
examples/: 1. helloworld.slg  2. simple_chars.slg  3. simple_nums.slg  README.md
examples/C++ Demos/: README.md
examples/C++ Demos/math/: main.cpp
examples/C++ Demos/printing/: compile.sh
include/: ast.hpp  codegen.hpp  debug_stream.hpp  exceptions.hpp  lexer.hpp  parser.hpp  slang.hpp
src/: ast.cpp  codegen.cpp  lexer.cpp  parser.cpp  slang.cpp
tests/: CMakeLists.txt  test_lexer.cpp  test_parser.cpp
